<resources>
    <string name="app_name">NewsApp</string>
    <string name="section">a</string>
    <string name="title">b</string>
    <string name="author">c</string>
    <string name="date">d</string>
    <string name="body">e</string>
    <string name="url">f</string>
    <string name="no_stories">No New Stories</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="settings_sports_label">Sports</string>
    <string name="settings_sports_key" translatable="false">sports</string>
    <string name="settings_sports_default" translatable="false">0</string>
    <string name="settings_science_label">Science</string>
    <string name="settings_science_key" translatable="false">science</string>
    <string name="settings_science_default" translatable="false">0</string>
    <string name="settings_technology_label">Technology</string>
    <string name="settings_technology_key" translatable="false">technology</string>
    <string name="settings_technology_default" translatable="false">0</string>
    <string name="settings_health_label">Health</string>
    <string name="settings_health_key" translatable="false">health</string>
    <string name="settings_health_default" translatable="false">0</string>
    <string name="settings_politics_label">Politics</string>
    <string name="settings_politics_key" translatable="false">politics</string>
    <string name="settings_politics_default" translatable="false">0</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="settings_news_topic_label">News Topic</string>
    <string name="settings_news_topic_key" translatable="false">news_topic</string>
    <string name="settings_news_topic_default" translatable="false">0</string>
</resources>
