<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/section_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section" />
    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />
    <TextView
        android:id="@+id/author_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author" />
    <TextView
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />
    <TextView
        android:id="@+id/body_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body" />
    <TextView
        android:id="@+id/url_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url" />
</LinearLayout>